--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aedes": "^0.51.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mqtt": "^5.3.5",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.3",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "websocket-stream": "^5.5.2",
+    "ws": "^8.16.0"
   }
 }
