--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=dcstth
-CHECK_INDEX_ENTRY = 0
+CHECK_INDEX_ENTRY =0
+MQTT_HOST=36.66.152.254:1884
+MQTT_USERNAME=brokerTTH
+MQTT_PASSWORD=brokerTTH
+
